styling.css
*{
   margin: 0;
   border: border-box;
   font-family: Arial, Helvetica, sans-serif;

}

.navbar{
   background-color: #0f1111;
   height: 60px;
   color: beige;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   
}

/* box1 */

.navLogo{
   height: 50px;
   width: 100px;
}
.logo{
   height: 50px;
   background-image: url("amazon_logo.png");
   background-size: cover;
   width:100%;
}
.border{
   border: 1.5px solid transparent;
}
.border:hover{
   border: 1.5px solid white;
}

/* box2 */

.address{
   padding: 10px;
}

.firstadd{
   font-size: 0.85rem;
   color: #cccccc;
   margin-left: 15px;

}
.secadd{
   margin-left: 3px;

}
.addIcon{
   display: flex;
   align-content: center;
}

/* box3 */

.search{
   display: flex;
   width: 620px;
   height: 40px;
   justify-content: space-evenly;
   border-radius: 4px;
}
.search:hover{
    border: 2px solid orange;
}
.dropdown{
   background-color: #f3f3f3;
   text-align: center;
   width: 50px;
   border: none;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
}
.input{
   width: 100%;
   font-size: 1rem;
   border: none;
}
.searchIcon{
   display: flex;
   align-items: center;
   justify-content: center;
   width: 45px;
   font-size: 1.2rem;
   background-color: #febd68;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   color: #0f1111;
}

/* box4 */

.signIn{
   padding: 10px;
}

span{
   font-size: 0.7rem;
}
.navTexts{
   font-size: 0.85rem;
   font-weight: 700;
}

/* box5 */

.Orders{
   padding: 10px;
}

.cart i{
   font-size: 30px;
}
.cart{
   font-size: 0.85rem;
   padding: 10px;
}



/* panel */
.panel{
   height: 40px;
   background-color: #222f3d;
   display: flex;
   color: white;
   align-items: center;
   justify-content: space-evenly;
}
.panelOps p {
   display: inline;
   margin-left: 10px;
   padding: 10px;
   font-weight: 500;

}
.panelOps{
   width: 70%;
   font-size: 0.85rem;

}
.deals{
   font-size: 0.9rem;
   font-weight: 700;
   padding: 10px;
}
.menu{
   padding: 10px;
   font-weight: 700;
}


/* hero section */

.heroSection{
   background-image: url("heroAmazon.jpg");
   background-size: cover;
   height: 300px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   
}
.hero-msg{
   background-color: white;
   color: #0f1111;
   height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 0.85rem;
   width: 97%;
   margin-bottom: 30px;
}
.hero-msg a{
   color: #007185;
}

/* shop-section */

.shop-section{
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 1rem;
   justify-content: space-evenly;
   background-color: pink;
}

.box{
   width: 23%;
   height: 400px;
   background-color: white;
   padding: 20px 0px 15px;
   margin-top: 15px;
   margin-bottom: 1rem;
}
.box-img{
   height: 320px;
   background-size: cover;
   background-position: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
   
}
.box-content{
   margin-left: 10px;
   margin-right: 10px;
}
.box-content p{
   color: #007185;
}

/* footer */

footer{
   margin-top: 1rem;
}

.footer1{
   background-color: #37475a;
   color: white;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 0.85rem;
}

.footer2{
   background-color: #222f3d;
   color: white;
   height: 300px;
   display: flex;
   justify-content: space-evenly;
}

ul{
   margin-top: 20px;
}

ul a{
   display: block;
   font-size: 0.85rem;
   color: #dddddd;
   margin-top: 10px;
}

.footer3{
   background-color: #222f3d;
   color: #dddddd;
   border-top: 0.5px solid white;
   height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
}

.footer4{
   background-color: #0f1111;
   color: white;
   height: 80px;
}

.pages{
   font-size: 0.7rem;
   text-align: center;
   padding-top: 25px;
}

.copyright{
   padding-top: 5px;
   font-size: 0.7rem;
   text-align: center;
}


a:hover{
   text-decoration: underline;
}

